Fix coderabbit suggestions.
Co-authored-by: EmpyreanMist <christianfryksten1@gmail.com>
Co-authored-by: marcusmoller97 <marcusssmoller@gmail.com>